--- a/src/templates.simple/axosimple.app/Components/Unit.razor
+++ b/src/templates.simple/axosimple.app/Components/Unit.razor
@@ -71,7 +71,7 @@
 </div>
 
 
-<!-- Modal data alarms -->
+<!-- Modal data components -->
 <div class="modal fade" id="componentsviewmodal" tabindex="-1" aria-labelledby="componentsviewTitle" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
