--- a/src/templates.simple/axosimple.app/Components/AlarmsButton.razor
+++ b/src/templates.simple/axosimple.app/Components/AlarmsButton.razor
@@ -2,54 +2,61 @@
 @using AXSharp.Connector
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
-<button type="button" class="btn btn-primary position-relative" data-bs-toggle="modal" data-bs-target="#alarmsviewmodal">
-    Alarms
-    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-        @MessagesCount
-        <span class="visually-hidden">unread messages</span>
-    </span>
-</button>
+@if(MessagesCount > 0)
+{
+    <button type="button" class="btn btn-danger position-relative" data-bs-toggle="modal" data-bs-target="#alarmsviewmodal">
+        Alarms
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                @MessagesCount
+                <span class="visually-hidden">unread messages</span>
+        </span>
+    </button>
+}
+else
+{
+    <button type="button" class="btn btn-primary position-relative" data-bs-toggle="modal" data-bs-target="#alarmsviewmodal" disabled>
+        Alarms
+    </button>
+}
+        
 
 @code {
 
-    [Parameter]
     public int MessagesCount { get; set; }
+
+    private string Disabled => MessagesCount > 0 ? "false" : "true";
 
     public override void AddToPolling(ITwinElement element, int pollingInterval = 250)
     {
-        Messengers?.Select(p => p.IsActive).ToList().ForEach(messenger =>
+        foreach (var axoMessenger in this.Messengers.SelectMany(p => new ITwinElement[] { p.IsActive }))
         {
-            messenger.StartPolling(1500, this);
-            PolledElements.Add(messenger);
-        });
-
-        Messengers?.Select(p => p.WaitingForAcknowledge).ToList().ForEach(messenger =>
-        {
-            messenger.StartPolling(1500, this);
-            PolledElements.Add(messenger);
-        });
+            axoMessenger.StartPolling(2500, this);
+            PolledElements.Add(axoMessenger);
+        }
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await UpdateMessages();
         await base.OnAfterRenderAsync(firstRender);
+        this.StateHasChanged();
     }
 
     private async Task UpdateMessages()
     {
-        var a = Messengers?.SelectMany(p => new ITwinPrimitive[] { p.Category, p.IsActive, p.WaitingForAcknowledge });
-        var connector = Messengers?.FirstOrDefault()?.GetConnector();
-        await connector?.ReadBatchAsync(a)!;
         if (Messengers != null) MessagesCount = Messengers.Count(p => p.IsActive.Cyclic);
     }
 
-    private IEnumerable<AxoMessenger> Messengers => this.Component.GetChildren().Flatten(p => p.GetChildren()).OfType<AxoMessenger>();
+    private AxoMessenger[] Messengers => this.Component.GetChildren().Flatten(p => p.GetChildren()).OfType<AxoMessenger>().ToArray();
 
     protected override async Task OnInitializedAsync()
     {
-        await UpdateMessages();
         await base.OnInitializedAsync();
-    }
 
+        foreach (var axoMessenger in this.Messengers.SelectMany(p => new ITwinElement[] { p.IsActive }))
+        {
+            this.UpdateValuesOnChange(axoMessenger, 2500);
+        }
+        
+    }
 }
