--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -17,7 +17,7 @@
 
         <div class="navbar-image position-absolute bottom-0 mb-5 start-50 translate-middle-x">
             <a href="">
-                <img src="logo-axopen-no-background.svg" width="100%" class="mb-2" />
+                <img src="logo-header.svg" width="100%" class="mb-2" />
             </a>
         </div>
     </div>
