--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
@@ -11,7 +11,7 @@
 
 @foreach (var message in Messengers)
 {
-    if (message.IsActive.LastValue)
+    if (message.State > eAxoMessengerState.Idle)
     {
         <RenderableContentControl Context="message" Presentation="Base"></RenderableContentControl>
     }
