--- a/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerView.razor
@@ -4,7 +4,7 @@
 @inherits RenderableComplexComponentBase<AxoMessenger>
 @implements IDisposable;
 
-@if (Component.WaitingForAcknowledge.Cyclic || Component.IsActive.Cyclic)
+@if (Component.State > eAxoMessengerState.Idle)
 {
     <div class="container text-center">
         <div class="row">
