--- a/src/templates.simple/axosimple.app/Components/UnitsData.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsData.razor
@@ -27,7 +27,7 @@
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row">
-                        <RenderableContentControl Context="Entry.Plc.Context.ProcessDataPneumaticManipulator.DataManger.Set" Presentation="ShadowDisplay"/>
+                        <RenderableContentControl Context="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload" Presentation="ShadowDisplay" />
                     </div>
                 </div>
             </div>
