--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
@@ -3,9 +3,9 @@
 @using axosimple.hmi.Components;
 
 @inject IAlertDialogService _alerts
-@inherits RenderableComplexComponentBase<examples.PneumaticManipulator.CU>
+@inherits RenderableComplexComponentBase<axosimple.UnitTemplate.Unit>
 
-<Unit Component="Entry.Plc.Context.PneumaticManipulator2" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator">
+<Unit Component="Entry.Plc.Context.StarterUnitTemplate" Data="Entry.Plc.Context.StarterUnitTemplateProcessData">
     <ChildContent>
         <img src="logo-header.svg" />
     </ChildContent>
