--- a/src/templates.simple/axosimple.app/Pages/Units/Units.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/Units.razor
@@ -105,8 +105,8 @@
         {
             return new (StandardUnit, string, string)[]
             { 
-                (new StandardUnit(Entry.Plc.Context.PneumaticManipulator),"/Units/ManipulatorExample", "logo-header.svg"),
-                (new StandardUnit(Entry.Plc.Context.PneumaticManipulator2),"/Units/ManipulatorExample2", "logo-axopen-no-background.svg"),
+                (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"/Units/ManipulatorExample", "logo-header.svg"),
+                (new StandardUnit(Entry.Plc.Context.UnitTemplate),"/Units/ManipulatorExample2", "logo-axopen-no-background.svg"),
             };
         }
     }
