--- a/src/templates.simple/axosimple.app/Pages/Settings/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/Settings/ProcessData.razor
@@ -2,4 +2,4 @@
 @using AXSharp.Connector
 @using AXOpen.Data;
 
-<RenderableContentControl Context="@Entry.Plc.Context.ProcessDataPneumaticManipulator" Presentation="Command"></RenderableContentControl>
+<RenderableContentControl Context="@Entry.Plc.Context.UnitTemplateProcessData" Presentation="Command"></RenderableContentControl>
