nesting depth reduction in data

--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Testing.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Testing.razor
@@ -35,7 +35,7 @@
 
 <h2>Modal</h2>
 //<Modal>
-    <DataExchangeView Vm="@_vm" Presentation="Command" ModalDetailView="false" />
+    <DataExchangeView Vm="@_vm" Presentation="Command" ModalDataView="false" />
 //</Modal>
 
 //<CustomColumnsCode>
