additional fixies to axomessenger

--- a/src/core/src/AXOpen.Core.Blazor/_Imports.razor
+++ b/src/core/src/AXOpen.Core.Blazor/_Imports.razor
@@ -2,3 +2,4 @@
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.AspNetCore.Components.Authorization
 @using AXOpen.Base.Dialogs;
+@using Microsoft.Extensions.Localization
