--- a/src/templates.simple/axpansion/server/Components/AlarmsView.razor
+++ b/src/templates.simple/axpansion/server/Components/AlarmsView.razor
@@ -1,4 +1,5 @@
-﻿@using AXOpen.Messaging.Static
+﻿@namespace AXOpen.Core
+@using AXOpen.Messaging.Static
 @using AXSharp.Connector
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 @inject AuthenticationStateProvider AuthenticationStateProvider;
@@ -9,7 +10,7 @@
             <div class="container">
                 <div class="row">
                     <h1 class="modal-title fs-5" id="alarmsviewTitle">Alarms</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="StateHasChanged"></button>
                 </div>
                 <div class="row p-3">
                     <button type="button" class="btn btn-primary m-3" @onclick="AcknowledgeAll">@Localizer["ACKNOWLEDGE ALL"]</button>
@@ -27,7 +28,7 @@
                             {
                                 if (message.State > eAxoMessengerState.Idle)
                                 {
-                                    <RenderableContentControl Context="@message" Presentation="Base"></RenderableContentControl>
+                                    <RenderableContentControl Context="@message" Presentation="Detailed"></RenderableContentControl>
                                 }
                             }
                         }
