acyclic communication added

--- a/src/components.rexroth.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.rexroth.drives/app/ix-blazor/Pages/Component_1.razor
@@ -8,18 +8,18 @@
     #region WriteTaskDurationToConsole
     private async Task WriteTaskTimesToConsole()
     {
-        await Entry.Plc.documentation.compnentOne.ExampleDrive.WriteTaskDurationToConsole();
+        await Entry.Plc.documentation.compnentOne.AxoIndraDrive_.WriteTaskDurationToConsole();
     }
     #endregion
 
 }
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentOne.ExampleDrive" />
+<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentOne.AxoIndraDrive_" />
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentOne.ExampleDrive" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentOne.AxoIndraDrive_" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
