--- a/src/components.rexroth.drives/app/ix-blazor/Pages/Component_2.razor
+++ b/src/components.rexroth.drives/app/ix-blazor/Pages/Component_2.razor
@@ -11,18 +11,18 @@
     #region WriteTaskDurationToConsole
     private async Task WriteTaskTimesToConsole()
     {
-        await Entry.Plc.documentation.compnentOne.ExampleDrive.WriteTaskDurationToConsole();
+        await Entry.Plc.documentation.compnentOne.AxoIndraDrive_.WriteTaskDurationToConsole();
     }
     #endregion
     
 }
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentTwo.ExampleDrive" />
+<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentTwo.AxoIndraDrive_" />
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentTwo.ExampleDrive" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentTwo.AxoIndraDrive_" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
