--- a/src/templates.simple/axpansion/server/Pages/Units/ManipulatorExample.razor
+++ b/src/templates.simple/axpansion/server/Pages/Units/ManipulatorExample.razor
@@ -5,7 +5,10 @@
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<axosimple.UnitTemplate.Unit>
 
-<Unit Component="Entry.Plc.Context.UnitTemplate" Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload" DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Header">
+<Unit Component="Entry.Plc.Context.UnitTemplate" 
+      DataManger="Entry.Plc.Context.UnitTemplateProcessData"
+      Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload" 
+      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Header">
     <ChildContent>
         <img src="logo-header.svg"/>
     </ChildContent>
