adds guiding feature to templates

--- a/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerDetailedView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerDetailedView.razor
@@ -31,7 +31,8 @@
                         </button>
                     </div>
                 </div>
-            </div>        
+            </div>    
+        @Component.Symbol;
         @if (!OnlyAlarmView)
         {
             <div class="row">
