--- a/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
+++ b/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
@@ -105,8 +105,8 @@
         {
             return new (StandardUnit, string, string)[]
             { 
-                (new StandardUnit(Entry.Plc.Context.UnitTemplate),"/Units/ManipulatorExample", "logo-header.svg"),
-                (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"/Units/ManipulatorExample2", "logo-axopen-no-background.svg"),
+                // (new StandardUnit(Entry.Plc.Context.UnitTemplate),"Context/Units/{UnitName}", "logo-header.svg"),
+                // (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"Context/Units/{UnitName}", "logo-axopen-no-background.svg"),
             };
         }
     }
