--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Units/ManipulatorExample"
 @using AXOpen.Base.Dialogs;
+@using Draggable
 @using axosimple.hmi.Components;
 
 @inject IAlertDialogService _alerts
@@ -7,6 +8,11 @@
 
 <Unit Component="Entry.Plc.Context.PneumaticManipulator" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator">
     <ChildContent>
-        <img src="logo-header.svg"/>
+        <DraggableContainer ImgSrc="logo-header.svg">
+            @foreach (var axoObject in Entry.Plc.Context.PneumaticManipulator.GetChildren().Flatten(p => p.GetChildren()).OfType<AXOpen.Core.AxoObject>())
+            {
+                <DraggableItem AxoObject="axoObject" />
+            }
+        </DraggableContainer>
     </ChildContent>
 </Unit>
